MCR-2364 fixed warnings and removed unused method